# libvariant

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  configure.ac  variant.cc
.github/workflows/: clang-format-check.yml
include/: variant.h
