AC_PREREQ([2.69])

# Initialize AC: ACINIT( package_name, version, bug_report_address )
AC_INIT([libvariant], [0.0], [kitibodee.ph@ksu.ac.th])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIRS([m4])

AC_PROG_CXX
AM_PROG_AR

CXXFLAGS="-std=c++17 -fPIC"
LT_INIT

AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE
AC_OUTPUT
